it's ready for 0.16.  It's just the behavior I think users expect. :-)

-------------------------------------------------------------------------------

Fri Sep 24 13:06:55 PDT 1999
(Raster)

remove iconbox auto create code - add creat eiconbox entyr to 
settings menu aswell

-------------------------------------------------------------------------------

Fri Sep 24 13:31:05 PDT 1999
(Raster)

allow borderless windows in focus list - rmeve hack laying around 
since early gnome days..

-------------------------------------------------------------------------------

Fri Sep 24 16:43:48 EST 1999
(Christian)

Grrr. Added more bugs.


-------------------------------------------------------------------------------

Sat Sep 25 13:03:34 PDT 1999
(Raster)

fix iconbox border going all wierd when in auto resize mode.. :)

-------------------------------------------------------------------------------

Sat Sep 25 13:07:52 PDT 1999
(Raster)

add mroe to the color modifiers comment dialog...

-------------------------------------------------------------------------------

Sun Sep 26 19:37:30 PDT 1999
(Mandrake)

added patch from Martin Tyler <martin@boo.org>
fixes segfaults in modules loading with ipc.


-------------------------------------------------------------------------------

Sun Sep 26 19:45:58 PDT 1999
(Mandrake)

added a bug from the mailing list.

-------------------------------------------------------------------------------

Mon Sep 27 12:12:46 EST 1999
(Christian)

Fixed the segfault that ocurred when switching
to Ganymede from BrushedMetal with a previously
wiped out ~/.enlightenment. The problem was that
a pointer was freed but not set to NULL.

I have a question regarding this: Wouldn't it
be good to set a freed pointer to NULL by default?
For example by changing the Efree macro to

#define Efree(x) \
__Efree(x, __FILE__, __LINE__)\
x = NULL;

or something? Since Efree is called about 700 times 
in E, I really didn't want to mess that up.